--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,88 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  font-size: 20px;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+
+.App {
+  text-align: center;
+}
+
+.top-header {
+  background: #d6c7c4;
+  color: #fff;
+  text-align: center;
+  padding: 20px;
+  font-size: 30px;
+}
+
+.play-button {
+	position: absolute;
+	left: 50%;
+	transform: translateX(-50%);
+	margin-top: 2rem;
+	box-sizing: border-box;
+	display:block;
+	width: 6rem;
+	height: 6rem;
+	line-height: 1rem;
+
+	/* add round border to display a circle */
+	border: 6px solid #000;
+	border-radius: 50%;
+	border-color: #d3cdcc;
+
+	background-color: #f0eae9;
+
+	font-size: 4rem;
+	font-weight: bold;
+
+	text-align:center;
+	text-decoration:none;
+	transition: all 0.3s ease;
+}
+
+.play {
+	margin-left: 7px;
+	margin-top: 9px;
+	color: #ee2110;
+	filter: drop-shadow(0px 0px 10px rgba(244, 127, 84, 0.8));
+}
+.play:hover {
+	filter: drop-shadow(0px 0px 10px rgba( 244, 105, 53, 1));
+}
+.pause {
+	/*margin-left: 5px;*/
+	margin-top: 9px;
+	color: #ee2110;
+	filter: drop-shadow(0px 0px 10px rgba(244, 127, 84, 0.8));
+}
+.pause:hover {
+	filter: drop-shadow(0px 0px 10px rgba( 244, 105, 53, 1));
+}
+.play-button:hover {
+	background-color: #b2acab;
+	box-shadow: 0px 0px 10px rgba(92, 90, 90,1);
+	text-shadow: 0px 0px 10px rgba(92, 90, 90,1);
+}
+
+
+canvas {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translateX(-50%);
+  /*margin: 0 auto;*/
+  display: block;
+  text-align: center;
+  padding: 0.5em 0;
+  overflow-y: visible;
+
 }
